correct z-index dropdown

--- a/style/elements/select.css
+++ b/style/elements/select.css
@@ -7,6 +7,7 @@
 /* ============ SELECT ============ */
 
 .dropdown {
+   z-index: 5;
    box-sizing: border-box;
    position: relative;
 }
